Fix spacing with hints and on login page

--- a/Custom Dashboards/web/js/mango-3.3/maDashboards.css
+++ b/Custom Dashboards/web/js/mango-3.3/maDashboards.css
@@ -145,22 +145,6 @@ img.point-disabled {
     width: 15px;
 }
 
-/* Styles for Angular Material components used in maDashboards directives */
-md-input-container md-select {
-    margin: 0;
-    -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
-    order: 2;
-}
-
-md-input-container .md-errors-spacer {
-    min-height: 0 !important;
-}
-
-md-select {
-	/*min-width: 200px;*/
-}
-
 .ma-set-point-value md-input-container,
 .ma-set-point-value md-select {
 	margin: 6px;
