--- a/Custom Dashboards/web/mdAdmin/components/watchListPage/watchListPage.css
+++ b/Custom Dashboards/web/mdAdmin/components/watchListPage/watchListPage.css
@@ -52,10 +52,6 @@
   margin-bottom: 0;
 }
 
-.watchlist-main .parameter-inputs md-input-container .md-errors-spacer {
-  display: none;
-}
-
 /* Chart Component */
 
 .watchlist-main .chart-content {
